PROJECT(nChessFill)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(HEADERS Include/ChessFillLib/ChessFillLib.h)
SET(SOURCE_FILES ChessFillLib.c)

SOURCE_GROUP(Source FILES ${SOURCE_FILES})
SOURCE_GROUP(Headers FILES ${HEADERS})

ADD_LIBRARY(ChessFillLib STATIC ${SOURCE_FILES} ${HEADERS} )

INCLUDE_DIRECTORIES(ChessFillLib Include)
