PROJECT(nChessFill)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(HEADERS )
SET(SOURCE_FILES ChessFillLibTest.c)

SOURCE_GROUP(Source FILES ${SOURCE_FILES})
SOURCE_GROUP(Headers FILES ${HEADERS})

ADD_EXECUTABLE(ChessFillLibTest ${SOURCE_FILES} ${HEADERS} )

TARGET_LINK_LIBRARIES(ChessFillLibTest ChessFillLib)
INCLUDE_DIRECTORIES(ChessFillLibTest ../ChessFillLib/Include)